# aqusition_os

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.reverse-proxy.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  start_local_dev.ps1  start_public_api.bat  tailwind.config.js
config/: guardrails.json
docs/: BACKEND_INTEGRATION_ANALYSIS.md  BOOK_NOW_FLOW.md  BULK_UPDATE_FRONTEND_UI.md  BULK_UPDATE_IMPLEMENTATION.md  BULK_UPDATE_TEST_RESULTS.md  CLIENT_ONBOARDING_V1.md  CLIENT_SCHEMA_V2.md  CLI_OPERATIONS.md  CLI_USAGE.md  CONSOLE_ACCESS.md  CONSOLE_EVENTS_VIEW.md  CONTENT_PERSONALIZATION_SUMMARY.md  DB_INTEGRATION_AND_BULK_UPDATES.md  DEPLOYMENT.md  E2E_FEATURES.md  E2E_INITIALIZATION.md  EVENT_TRACKING_CONFIGURATION.md  EVENT_TRACKING_OPERATIONS.md  EXPECTED_PREMIUM_PAGE_CONTENT.md  FOLDER_STRUCTURE.md  FRONTEND_BULK_OPERATIONS.md  GOLDEN_PLATE_PAGE_CREATION.md  HOW_EVENT_TRACKING_WORKS.md  HOW_ONBOARDING_WORKS.md  INFRA_DIAGRAM.md  INVESTIGATE_DUPLICATE_BOOKINGS_PLAN.md  LANDING_PAGE_SERVICE_PACKAGES.md  LINE_INTEGRATION.md  LOCAL_DEV_GUIDE.md  LOCAL_DEV_SETUP.md  LOCAL_DEV_SUMMARY.md  MANUAL_TEST_CHECKLIST.md  MARKETPLACE_MODEL_SWOT.md  MONEYBOARD_COMPLETE_FLOW.md  MONEYBOARD_IMPLEMENTATION_DETAILS.md  PILOT_CLIENT_CONFIGURATION.md  PILOT_POST_ONBOARDING.md  PRE_LAUNCH_VERIFICATION_CHECKLIST.md  PUBLISHING_WALKTHROUGH.md  QUICK_START_LOCAL.md  (+30 more)
ops/: ABUSE_CONTROLS.md  ASSUMPTION_LEDGER.md  BACKUP_POLICY.md  CI_GATES.md  CONFIG_REFERENCE.md  DEPLOYMENT_EDGE.md  DEPLOYMENT_GUIDE.md  QUEUE.md  (+29 more)
(+447 files in other folders)
